fix column width for first column, which is always the name of something; fix table at 100% instead of dynamic to stretch page. looks fine in just about all scenarios.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -41,3 +41,13 @@ td {
     padding: 0.8em 0.6em !important;
         font-size: .70rem;
 }
+
+table.dataTable {
+    width: 100% !important;
+    table-layout: fixed;
+}
+
+table.dataTable,
+table.dataTable * {
+    transition: none !important;
+}
